# mycobot

./: LICENSE  README.md
mycobot/: CMakeLists.txt  package.xml  setup.py
mycobot/examples/: gripper.py  led.py  moveit.py
mycobot/firmware/base/: platformio.ini
mycobot/firmware/gripper/: platformio.ini
mycobot/firmware/id_writer/: platformio.ini
mycobot/scripts/: test.py
mycobot/src/mycobot/: commander.py  (+4 more)
mycobot_bringup/: CMakeLists.txt  package.xml
mycobot_bringup/launch/: bringup.launch  joints_gui.launch  moveit.launch  mycobot.rviz
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: description.launch  view_urdf.launch
mycobot_description/meshes/: finger_left.stl  finger_right.stl  gripper_base.stl
mycobot_description/urdf/: mycobot.urdf
mycobot_driver/: CMakeLists.txt  package.xml
mycobot_driver/scripts/: driver.py
mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  mycobot.srdf  ompl_planning.yaml  ros_controllers.yaml
mycobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  mycobot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+40 files in other folders)
