<?xml version="1.0"?>
<package format="2">
  <name>mycobot_bringup</name>
  <version>0.0.0</version>
  <description>The mycobot_bringup package</description>
  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mycobot</exec_depend>
</package>
